--- a/EventBus/HelpDesk.EventBus/HelpDesk.EventBus.csproj
+++ b/EventBus/HelpDesk.EventBus/HelpDesk.EventBus.csproj
@@ -84,7 +84,7 @@
     <Compile Include="EventBusInstaller.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RabbitMQClientManager.cs" />
+    <Compile Include="RabbitMQBusControlManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HelpDesk.Common\HelpDesk.Common.csproj">
