--- a/Presentation/HelpDesk.CabinetWebApp/packages.config
+++ b/Presentation/HelpDesk.CabinetWebApp/packages.config
@@ -32,8 +32,10 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
-  <package id="Unity" version="4.0.1" targetFramework="net461" />
-  <package id="Unity.Mvc" version="4.0.1" targetFramework="net461" />
-  <package id="WebActivatorEx" version="2.0.6" targetFramework="net461" />
+  <package id="Unity" version="5.3.1" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="2.3.0" targetFramework="net461" />
+  <package id="Unity.Container" version="5.3.1" targetFramework="net461" />
+  <package id="Unity.Mvc" version="5.0.8" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
