--- a/Services/HelpDesk.CalculateEventService/packages.config
+++ b/Services/HelpDesk.CalculateEventService/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
   <package id="Quartz" version="2.6.1" targetFramework="net461" />
   <package id="Quartz.Unity" version="2.0.0" targetFramework="net461" />
   <package id="Unity" version="5.3.1" targetFramework="net461" />
