--- a/Services/HelpDesk.ConsumerEventSrvice/packages.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GreenPipes" version="1.0.9" targetFramework="net461" />
+  <package id="GreenPipes" version="1.2.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MassTransit" version="3.5.7" targetFramework="net461" />
   <package id="MassTransit.Log4Net" version="3.5.7" targetFramework="net461" />
   <package id="MassTransit.RabbitMQ" version="3.5.7" targetFramework="net461" />
-  <package id="NewId" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
+  <package id="NewId" version="3.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="RabbitMQ.Client" version="4.1.3" targetFramework="net461" />
+  <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
   <package id="Topshelf.Log4Net" version="4.0.3" targetFramework="net461" />
+  <package id="Unity" version="5.3.1" targetFramework="net461" />
 </packages>
